0.5
        - Documented uinput-module.

0.4

        - Updated project details, such as homepage, download url, etc.

0.3.3

        - Explicit dependence on libsuinput.

0.3.2

        - Mention Ubuntu-package in README.

0.3.1

        - New license: GPLv3+